# engram

./: .gitignore  CHANGELOG.md  COMPARISON.md  Cargo.toml  LICENSE  PLAN.md  README.md  SHIPPING.md  SKILL_PLAN.md
.github/workflows/: ci.yml  release.yml
Formula/: engram.rb
benches/: indexing.rs  search.rs
scripts/: install-mcp.sh
skills/engram/: SKILL.md
src/: lib.rs  main.rs  watcher.rs
src/cli/: mod.rs
src/embeddings/: mod.rs
src/git/: mod.rs
src/graph/: mod.rs  schema.rs  store.rs
src/intelligence/: community.rs  mod.rs  reasoning.rs  similarity.rs
src/mcp/: mod.rs
src/memory/: cascade.rs  context.rs  mod.rs
src/parser/: chunking.rs  languages.rs  markdown.rs  mod.rs  treesitter.rs
src/temporal/: mod.rs
tests/: budget_test.rs  cli_integration.rs  codesearchnet_eval.rs  engrambench.rs  gap_fixes.rs  indexing_correctness.rs  mcp_tools.rs  multilang_parsing.rs  proptest_cascade.rs  search_quality.rs  snapshot_parsing.rs
tests/fixtures/cross_file/: impl_a.rs  impl_b.rs  trait_def.rs
tests/fixtures/diamond/: main.rs
tests/fixtures/large/: generate.sh
tests/fixtures/multilang/: sample.c  sample.cpp  sample.go  sample.java  sample.js  sample.py  sample.rb  sample.rs  sample.ts
tests/fixtures/scope_test/: nested.py  nested.rs
tests/fixtures/simple/: README.md  auth.rs  db.rs  handler.rs  main.rs  utils.rs
tests/snapshots/: snapshot_parsing__c_symbols.snap  snapshot_parsing__cpp_symbols.snap  snapshot_parsing__go_symbols.snap  snapshot_parsing__handler_call_edges.snap  snapshot_parsing__java_symbols.snap  snapshot_parsing__python_symbols.snap  snapshot_parsing__ruby_symbols.snap  snapshot_parsing__rust_symbols.snap  snapshot_parsing__typescript_symbols.snap
