[package]
name = "engram"
version = "0.1.0"
edition = "2024"
description = "Persistent codebase intelligence daemon for coding agents"
license = "MIT"
repository = "https://github.com/aniasusual/engram"
homepage = "https://github.com/aniasusual/engram"
keywords = ["mcp", "coding-agents", "memory", "code-intelligence", "tree-sitter"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "engram"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# SQLite storage (with FTS5 + bundled build)
rusqlite = { version = "0.32", features = ["bundled", "backup", "blob", "functions"] }

# AST parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"

# Embeddings (local ONNX inference)
fastembed = "4"

# MCP server
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Git integration
git2 = "0.19"

# File watching
notify = "7"
notify-debouncer-full = "0.4"

# Streaming iterator (required by tree-sitter query API)
streaming-iterator = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
uuid = { version = "1", features = ["v4"] }
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
ignore = "0.4"    # .gitignore-aware directory walking
glob = "0.3"

[dev-dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Property-based testing
proptest = "1.4"

# Snapshot testing
insta = { version = "1.38", features = ["yaml"] }

# Parameterized tests
rstest = "0.24"

# Temp directories
tempfile = "3"

# CLI testing
assert_cmd = "2"
predicates = "3"

# Async test support
tokio-test = "0.4"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1

[[bench]]
name = "indexing"
harness = false

[[bench]]
name = "search"
harness = false
